# tagotip-sdk

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  justfile
.github/workflows/: ci.yml  publish-crate.yml  publish-node.yml  publish-python.yml
tagotip-arduino/: .gitignore  library.properties  test_crypto  test_parse
tagotip-arduino/examples/BasicPush/: BasicPush.ino
tagotip-arduino/examples/BuildPing/: BuildPing.ino
tagotip-arduino/examples/ParseAck/: ParseAck.ino
tagotip-arduino/examples/SecureRoundTrip/: SecureRoundTrip.ino
tagotip-arduino/src/: tagotip.h  tagotips.c  tagotips.h
tagotip-arduino/tests/: test_crypto.c  test_parse.c
tagotip-codec/: Cargo.toml  README.md
tagotip-codec/src/: consts.rs  error.rs  escape.rs  fmt.rs  inline_vec.rs  lib.rs  types.rs  validate.rs
tagotip-codec/src/parse/: ack.rs  body.rs  frame.rs  mod.rs  variable.rs
tagotip-codec/tests/: build.rs  edge_cases.rs  granular.rs  parse_ack.rs  parse_ping.rs  parse_pull.rs  parse_push.rs  spec_examples.rs
tagotip-ffi/: Cargo.toml  tagotip.h
tagotip-ffi/src/: lib.rs
tagotip-ffi/tests/: ffi_test.rs
tagotip-go/: .gitignore  build.go  build_test.go  ccm.go  consts.go  error.go  escape.go  go.mod  parse.go  parse_test.go  secure.go  secure_test.go  tagotip.go  types.go  validate.go
tagotip-node/: .gitignore  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
tagotip-node/src/: build.ts  consts.ts  error.ts  escape.ts  index.ts  parse.ts  secure.ts  types.ts  validate.ts
tagotip-node/tests/: integration.test.ts  parse.test.ts  secure.test.ts
tagotip-python/: .gitignore  Cargo.toml  pyproject.toml
tagotip-python/src/: lib.rs
tagotip-python/src/tagotip/: __init__.py  build.py  parse.py  secure.py  types.py
tagotip-python/tests/: test_functional.py  test_parse.py  test_secure.py
tagotip-secure/: Cargo.toml  README.md
tagotip-secure/src/: cipher.rs  consts.rs  envelope.rs  error.rs  hash.rs  lib.rs  nonce.rs  types.rs
tagotip-secure/tests/: edge_cases.rs  round_trip.rs  spec_vector.rs
