[workspace]
members = ["tagotip-codec", "tagotip-secure", "tagotip-ffi", "tagotip-python"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0-beta.3"
license = "Apache-2.0"
authors = ["TagoIO Inc."]
repository = "https://github.com/tago-io/tagotip-sdk"
homepage = "https://tago.io"
rust-version = "1.85"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
single_match_else = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
unnecessary_wraps = "allow"
iter_without_into_iter = "allow"
single_match = "allow"
manual_let_else = "allow"
